# gtk-qix-like-game

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  drawing.c  drawing.h  events.c  events.h  line.c  line.h  main.c  player.c  player.h  qix_line-old.c  qix_line.c  trails.c  trails.h  wip.txt
includes/: bitmap.h  colors.h  drawing.h  events.h  globals.h  line.h  lines.h  main.h  player.h  printer.h  qix_monster.h  trails.h
src/: bitmap.c  drawing.c  events.c  globals.c  line.c  lines.c  main.c  player.c  printer.c  qix_monster.c  trails.c
